# ai-for-developers-project-387

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  render.yaml
.github/workflows/: ci-tests.yml  ci.yml  lighthouse-nightly.yml  manual_opencode_task.yml  opencode.yml  weekly_code_audit.yml
backend/: main.py  models.py  pyproject.toml  store.py  test_main.py
e2e/: booking.spec.ts  home.spec.ts
screenshots/: 01-home.txt  02-book-catalog.txt  03-book-event-type.txt  cal-com.txt
scripts/: lighthouse-check.js
src/: App.tsx  index.css  main.tsx
src/api/: hooks.ts  index.ts
src/components/: Layout.tsx
src/pages/: AdminBookingsPage.tsx  AdminEventTypesPage.tsx  AdminPage.tsx  BookingPage.tsx  EventCatalogPage.tsx  HomePage.tsx
typespec/: main.tsp  package-lock.json  package.json  tspconfig.yaml
